# VEXWorkshop

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build-  cfg.ini  imgui.ini
bench/: bench_config.h
bench/misc/: bittests.cpp
cmake_out/MSVCDebug/: ALL_BUILD.vcxproj  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  VEXGameOfLife.sln  VEXGameOfLife.vcxproj  VEXGameOfLife.vcxproj.filters  cmake_install.cmake  imgui.vcxproj  imgui.vcxproj.filters
cmake_out/MSVCDebug/.cmake/api/v1/reply/: cache-v2-512e42521518e3012671.json  cmakeFiles-v1-e310046d06d426fadc2f.json  codemodel-v2-97fe52b6e4e9a6158180.json  directory-third_party.SDL2-Debug-07b56f2c53a8a17b76a7.json  directory-third_party.SDL2-RELWITHDEBINFO-769e717963d8c145b549.json  directory-third_party.SDL2-Release-d04495b0485a90aac9ed.json  index-2022-07-03T20-31-21-0224.json  target-ALL_BUILD-Debug-720e6a693c71c36ad150.json  target-ALL_BUILD-RELWITHDEBINFO-10e4610a2494d25f53ec.json  target-ALL_BUILD-Release-0a2e5ef06ce6e2178860.json  target-ALL_BUILD-Release-0b99997c39233bcccd9b.json  target-SDL2-Debug-3781e6f2d95b2042f932.json  target-SDL2-RELWITHDEBINFO-a2091a8d7d51b983ebe0.json  target-SDL2-Release-1d18575d68f5e2c6c2c0.json  target-SDL2-static-Debug-e3cfb841dae83e1075e2.json  target-SDL2-static-RELWITHDEBINFO-2e5d0847dd09a4da74a8.json  target-SDL2-static-Release-cb88db66d2a83e956b2d.json  target-SDL2main-Debug-75510826932856c140c4.json  target-SDL2main-RELWITHDEBINFO-e163ff8267addaef2b72.json  target-SDL2main-Release-ab22fab5f4329212d981.json  target-VEXGameOfLife-Debug-443238104f4c49dbf2d5.json  target-VEXGameOfLife-RELWITHDEBINFO-e595a30f4d54c356968a.json  target-VEXGameOfLife-Release-93d8d99252cbfc4c33e1.json  target-imgui-Debug-c1287da5dad6d4ab132f.json  target-imgui-RELWITHDEBINFO-44e2305587fa110c87fd.json  target-imgui-Release-23c2165474dfda285307.json  target-spdlog-Debug-f1105ff982de802965e1.json  target-spdlog-RELWITHDEBINFO-fe9d625495c936d2b68f.json  target-spdlog-Release-39668f2b8712980ec593.json  target-uninstall-RELWITHDEBINFO-4dccc158b9823cdaca09.json  toolchains-v1-615bdbac249471a09234.json
cmake_out/clang_win_dbg/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
cmake_out/clang_win_dbg/.cmake/api/v1/reply/: cache-v2-5fd9888721e20fdbe4b0.json  cmakeFiles-v1-3ef1f823a8ceae9e82ca.json  codemodel-v2-cc830629f7b8466d6ea7.json  directory-third_party.SDL2-Debug-6a1f74580e09eb2a0310.json  index-2022-07-11T16-26-15-0850.json  target-SDL2-Debug-9f58bddb7b01948d1bfe.json  target-SDL2-static-Debug-5e4368c70e7d9c5e291a.json  target-SDL2main-Debug-372dd410e9ae0d35adb3.json  target-VEXGameOfLife-Debug-b61c94ae638194b255b1.json  target-imgui-Debug-0427f9012ec99fd45393.json  target-spdlog-Debug-6ea335bd4e130447536e.json  target-uninstall-Debug-e9f2db4e90f7461fd756.json  toolchains-v1-fd905e9b813aa1e3b5b8.json
cmake_out/clang_win_dbg/isenseconfig/: iconfig.json
content/fonts/: a.txt  b.txt
content/shaders/: plain_dbg.hlsl  simple.hlsl  world_gizmos.hlsl
content/shaders/hlsl/: plain_dbg.hlsl  simple.hlsl  world_gizmos.hlsl
content/shaders/wgsl/: background.wgsl  basic_unlit.wgsl  cell_debugmap.wgsl  cell_heatmap.wgsl  gizmo_color.wgsl  grid.wgsl
content/shaders/wgsl/flow/: flowfield_conv.wgsl  flowfield_hash.wgsl  flowfield_overlay.wgsl  flowfield_ps_quad_vf.wgsl  flowfield_ps_sym.wgsl
src/: main.cpp  other.cpp  other.h  pp.c
src/application/: Application.cpp  Application.h  Environment.h  Platfrom.cpp  Platfrom.h  SDLDx11Application.cpp  SDLDx11Application.h  SDLWindow.cpp  SDLWindow.h
src/demos/model_loader/: ModelLoader.cpp  ModelLoader.h
src/demos/path/: PathfinderDemo.cpp  PathfinderDemo.h
src/demos/pathfinding/: FlowFieldsDemo.cpp  FlowFieldsDemo.h
src/gfx/: GfxUtils.cpp  GfxUtils.h
src/io/: InputSystem.cpp  InputSystem.h
src/render/: ARenderSystem.cpp  ARenderSystem.h  Camera.h  SDLRenderer.h  legacyDx11.cpp  legacyDx11.h
src/render/Dx11/: DirectX11App.cpp  DirectXTypes.h
src/scene/: Grid.h
src/threading/: JobAPI.cpp  JobAPI.h  JobThread.cpp  JobThread.h
src/utils/: CLI.cpp  CLI.h  ImGuiUtils.cpp  ImGuiUtils.h
src_bench/: bench_main.cpp
src_platform/emscripten/: shell.html
src_platform/webgpu/demos/: ConsoleVars.h  ViewportHandler.cpp  ViewportHandler.h
src_platform/webgpu/demos/basic_textured_quad/: TexturedQuad.cpp  TexturedQuad.h
src_platform/webgpu/demos/model_loader/: ModelLoader.cpp  ModelLoader.h
src_platform/webgpu/demos/path/: GpuResources.cpp  GpuResources.h  PFState.cpp  PFState.h  PathfinderDemo.cpp  PathfinderDemo.h
src_platform/webgpu/render/: GfxTypes.h  LayoutManagement.cpp  LayoutManagement.h  WgpuApp.cpp  WgpuApp.h  WgpuTypes.cpp  WgpuTypes.h
src_platform/windows/render/: legacyDx11.cpp  legacyDx11.h
src_platform/windows/render/Dx11/: DirectX11App.cpp  DirectX11App.h
src_test/: config.h  test_main.cpp
src_test/vex/: ArrayTests.cpp  DictTests.cpp
third_party_bin/: CMakeLists.txt
third_party_bin/dawn/: CMakeLists.txt  webgpu_cpp.h
third_party_bin/dawn/cmake/: FetchDawn.cmake
third_party_bin/dawn/tools/: fetch_dawn_dependencies.py
third_party_bin/wgpu/: CMakeLists.txt
